--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -3,6 +3,7 @@
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.cinemachine": "2.9.0-pre.6",
     "com.unity.ide.vscode": "1.2.5",
+    "com.unity.inputsystem": "1.3.0",
     "com.unity.probuilder": "5.0.6",
     "com.unity.render-pipelines.universal": "14.0.3",
     "com.unity.textmeshpro": "3.0.6",
